[gd_scene load_steps=2 format=3 uid="uid://dpdxfe8crgv60"]

[ext_resource type="Script" path="res://ui/store.gd" id="1_o1ioq"]

[node name="Upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_bottom = -470.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1ioq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 578.0

[node name="Left" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Button" type="Button" parent="HBoxContainer/Left"]
visible = false
layout_mode = 2
text = "Armor"

[node name="ArmorPlate" type="Button" parent="HBoxContainer/Left"]
layout_mode = 2
text = "Armor Plate 0"

[node name="Button3" type="Button" parent="HBoxContainer/Left"]
visible = false
layout_mode = 2
text = "Uranium Shell 0"

[node name="Propellers" type="Button" parent="HBoxContainer/Left"]
layout_mode = 2
text = "Propellers 0"

[node name="Button5" type="Button" parent="HBoxContainer/Left"]
visible = false
layout_mode = 2
text = "Railgun"

[node name="Bayonet" type="Button" parent="HBoxContainer/Left"]
layout_mode = 2
text = "Bayonet 0"

[node name="Button7" type="Button" parent="HBoxContainer/Left"]
visible = false
layout_mode = 2
text = "Self Repair"

[connection signal="pressed" from="HBoxContainer/Left/ArmorPlate" to="." method="_on_armor_plate_pressed"]
[connection signal="pressed" from="HBoxContainer/Left/Propellers" to="." method="_on_propellers_pressed"]
[connection signal="pressed" from="HBoxContainer/Left/Bayonet" to="." method="_on_bayonet_pressed"]
